Fix dss_probing artifacts

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -28,8 +28,9 @@ v1:
   artifacts:
     output_path: output/dss_probing
     raw_report: {}
+    sequence_view: {}
     tested_requirements:
-      - report_name: astm_dss_reqs
+      - report_name: requirements
         requirement_collections:
           all_astm_dss_requirements:
             requirement_collections:
