--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -40,12 +40,12 @@ v1:
             auth_adapter: utm_auth
           specification:
             flight_planners:
-              # uss1 is the mock_uss directly exposing scdsc functionality
+              # uss1 is the mock_uss directly exposing flight planning functionality
               - participant_id: uss1
-                injection_base_url: http://scdsc.uss1.localutm/scdsc
-              # uss2 is another mock_uss directly exposing scdsc functionality
+                scd_injection_base_url: http://scdsc.uss1.localutm/scdsc
+              # uss2 is another mock_uss directly exposing flight planning functionality
               - participant_id: uss2
-                injection_base_url: http://scdsc.uss2.localutm/scdsc
+                scd_injection_base_url: http://scdsc.uss2.localutm/scdsc
 
         # Details of conflicting flights (used in nominal planning scenario)
         conflicting_flights:
