--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -21,11 +21,11 @@ v1:
           specification:
             flight_planners:
               - participant_id: uss1
-                injection_base_url: http://host.docker.internal:8074/scdsc
+                scd_injection_base_url: http://host.docker.internal:8074/scdsc
               - participant_id: uss2
-                injection_base_url: http://host.docker.internal:8074/scdsc
+                scd_injection_base_url: http://host.docker.internal:8074/scdsc
               - participant_id: mock_uss
-                injection_base_url: http://host.docker.internal:8074/scdsc
+                scd_injection_base_url: http://host.docker.internal:8074/scdsc
         mock_uss:
           resource_type: resources.interuss.mock_uss.client.MockUSSResource
           dependencies:
