Add flight_planning API implementation to mock_uss

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -42,10 +42,10 @@ v1:
             flight_planners:
               # uss1 is the mock_uss directly exposing flight planning functionality
               - participant_id: uss1
-                scd_injection_base_url: http://scdsc.uss1.localutm/scdsc
+                v1_base_url: http://scdsc.uss1.localutm/flight_planning/v1
               # uss2 is another mock_uss directly exposing flight planning functionality
               - participant_id: uss2
-                scd_injection_base_url: http://scdsc.uss2.localutm/scdsc
+                v1_base_url: http://scdsc.uss2.localutm/flight_planning/v1
 
         # Details of conflicting flights (used in nominal planning scenario)
         conflicting_flights:
