[uss_qualifier] DSS0030 migrate isa expiry check from prober

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -21,6 +21,12 @@ actions:
         isa: isa
         problematically_big_area: problematically_big_area
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.ISAExpiry
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.SubscriptionValidation
       resources:
         dss: dss
