--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -27,6 +27,12 @@ actions:
         id_generator: id_generator
         isa: isa
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.ISASubscriptionInteractions
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v19.dss.SubscriptionValidation
       resources:
         dss: dss
