[uss_qualifier] DSS0030 simple subscription test scenario

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -39,6 +39,13 @@ actions:
         id_generator: id_generator
         isa: isa
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.dss.SubscriptionSimple
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
+        problematically_big_area: problematically_big_area
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.DSSInteroperability
       resources:
         primary_dss_instance: dss
