--- a/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
@@ -4,13 +4,34 @@ v1:
     resources:
       resource_declarations:
         example_flight_check_table: {$ref: 'library/resources.yaml#/example_flight_check_table'}
+
+        utm_auth: {$ref: 'library/environment.yaml#/utm_auth'}
+        uss1_flight_planner: {$ref: 'library/environment.yaml#/uss1_flight_planner'}
+      non_baseline_inputs:
+        - v1.test_run.resources.resource_declarations.utm_auth
+        - v1.test_run.resources.resource_declarations.uss1_flight_planner
     action:
       test_scenario:
         scenario_type: scenarios.interuss.flight_authorization.GeneralFlightAuthorization
         resources:
           table: example_flight_check_table
+          planner: uss1_flight_planner
   artifacts:
     output_path: output/general_flight_auth
     raw_report: {}
+    sequence_view: {}
+    tested_requirements:
+      - report_name: requirements
+        requirement_collections:
+          example:
+            requirement_collections:
+              - requirements:
+                  - REQ_001
+                  - REQ_002
+                  - REQ_003
+                  - REQ_004
+                  - REQ_007
+        participant_requirements:
+          uss1: example
   validation:
     $ref: ./library/validation.yaml#/normal_test
