Improve test run report validation

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -41,6 +41,4 @@ v1:
           uss1: all_astm_dss_requirements
           uss2: all_astm_dss_requirements
   validation:
-    criteria:
-      - full_success: {}
-      - no_skipped_actions: {}
+    $ref: ./library/validation.yaml#/normal_test
