--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -91,10 +91,10 @@ actions:
         - uss1
         - uss2
   on_failure: Continue
-report_evaluation_scenario:
-  scenario_type: scenarios.astm.utm.AggregateChecks
-  resources:
-    flight_planners: flight_planners
+- test_scenario:
+    scenario_type: scenarios.astm.utm.AggregateChecks
+    resources:
+      flight_planners: flight_planners
 participant_verifiable_capabilities:
   - id: scd
     name: Strategic Conflict Detection
