--- a/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
+++ b/monitoring/uss_qualifier/suites/interuss/dss/all_tests.yaml
@@ -49,9 +49,9 @@ actions:
         dss_instance_id: dss
       on_failure: Continue
 # TODO: enable usage of aggregate checks when there are no service providers or observers
-#report_evaluation_scenario:
-#  scenario_type: scenarios.astm.netrid.v19.AggregateChecks
-#  resources:
-#    service_providers: service_providers
-#    observers: observers
-#    dss_instances: dss_instances
+#- test_scenario:
+#    scenario_type: scenarios.astm.netrid.v19.AggregateChecks
+#    resources:
+#      service_providers: service_providers
+#      observers: observers
+#      dss_instances: dss_instances
