--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
@@ -1,5 +1,5 @@
 intents:
-  flight_1_planned_time_range_A:
+  flight_1:
     full:
       basic_information:
         usage_state: Planned
@@ -49,7 +49,7 @@ intents:
         uas_type_certificate: ''
 
 
-  flight_2_planned_time_range_A:
+  flight_2:
     full:
       basic_information:
         usage_state: Planned
