Revert "Remover time_range_A suffix from flight intent"
This reverts commit 4a3df76ab472daacf6cfb0916f42f6b5c2eb5c78.

--- a/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
+++ b/monitoring/uss_qualifier/test_data/usa/kentland/flight_intents/non_conflicting.yaml
@@ -1,5 +1,5 @@
 intents:
-  flight_1:
+  flight_1_planned_time_range_A:
     full:
       basic_information:
         usage_state: Planned
@@ -49,7 +49,7 @@ intents:
         uas_type_certificate: ''
 
 
-  flight_2:
+  flight_2_planned_time_range_A:
     full:
       basic_information:
         usage_state: Planned
