--- a/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/netrid_v19.yaml
@@ -5,6 +5,7 @@ v1:
       resource_declarations:
         kentland_flights_data: {$ref: 'library/resources.yaml#/kentland_flights_data'}
         netrid_observation_evaluation_configuration: {$ref: 'library/resources.yaml#/netrid_observation_evaluation_configuration'}
+        utm_client_identity: {$ref: 'library/resources.yaml#/utm_client_identity'}
         id_generator: {$ref: 'library/resources.yaml#/id_generator'}
         kentland_service_area: {$ref: 'library/resources.yaml#/kentland_service_area'}
         au_problematically_big_area: {$ref: 'library/resources.yaml#/au_problematically_big_area'}
@@ -27,6 +28,7 @@ v1:
           observers: netrid_observers_v19
           evaluation_configuration: netrid_observation_evaluation_configuration
           dss_instances: netrid_dss_instances_v19
+          utm_client_identity: utm_client_identity
           id_generator: id_generator
           service_area: kentland_service_area
           problematically_big_area: au_problematically_big_area
