--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.yaml
@@ -5,6 +5,7 @@ resources:
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   dss_instances: resources.astm.f3411.DSSInstancesResource
+  utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
@@ -13,6 +14,7 @@ actions:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
         dss_instances: dss_instances
+        utm_client_identity: utm_client_identity
         id_generator: id_generator
         service_area: service_area
         problematically_big_area: problematically_big_area
@@ -23,6 +25,7 @@ actions:
             resources:
               dss: dss
               all_dss_instances: dss_instances
+              utm_client_identity: utm_client_identity
               id_generator: id_generator
               isa: service_area
               problematically_big_area: problematically_big_area
