--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -3,6 +3,7 @@ resources:
   dss: resources.astm.f3411.DSSInstanceResource
   all_dss_instances: resources.astm.f3411.DSSInstancesResource?
   id_generator: resources.interuss.IDGeneratorResource
+  utm_client_identity: resources.communications.ClientIdentityResource
   isa: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
 actions:
@@ -43,6 +44,7 @@ actions:
       resources:
         dss: dss
         id_generator: id_generator
+        client_identity: utm_client_identity
         isa: isa
         problematically_big_area: problematically_big_area
   - test_scenario:
