--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -17,6 +17,7 @@ resources:
   observers: resources.netrid.NetRIDObserversResource
   evaluation_configuration: resources.netrid.EvaluationConfigurationResource
   netrid_dss_instances: resources.astm.f3411.DSSInstancesResource
+  utm_client_identity: resources.communications.ClientIdentityResource
   id_generator: resources.interuss.IDGeneratorResource
   service_area: resources.netrid.ServiceAreaResource
   problematically_big_area: resources.VerticesResource
@@ -53,6 +54,7 @@ actions:
       observers: observers
       evaluation_configuration: evaluation_configuration
       dss_instances: netrid_dss_instances
+      utm_client_identity: utm_client_identity
       id_generator: id_generator
       service_area: service_area
       problematically_big_area: problematically_big_area
