Change USS_QUALIFIER_STOP_FAST to execution setting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,7 @@ jobs:
     with:
       name: uss_qualifier
       script: |
-        export CONFIG_NAME="" \
-          USS_QUALIFIER_STOP_FAST=true
+        export CONFIG_NAME=""
 
         cd monitoring/uss_qualifier
         make test
