--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -25,6 +25,8 @@ v1:
           id_generator: id_generator
           service_area: kentland_service_area
           problematically_big_area: kentland_problematically_big_area
+    execution:
+      stop_fast: true
   artifacts:
     output_path: output/dss_probing
     raw_report: {}
