--- a/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/general_flight_auth.yaml
@@ -16,6 +16,8 @@ v1:
         resources:
           table: example_flight_check_table
           planner: uss1_flight_planner
+    execution:
+      stop_fast: true
   artifacts:
     output_path: output/general_flight_auth
     raw_report: {}
