--- a/monitoring/uss_qualifier/configurations/dev/generate_rid_test_data.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/generate_rid_test_data.yaml
@@ -61,5 +61,7 @@ v1:
                   kml_flights_data: kml_flights_data
                   kml_storage_config: kml_storage_config
               on_failure: Continue
+    execution:
+      stop_fast: true
   validation:
     "$ref": "./library/validation.yaml#/normal_test"
