--- a/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geoawareness_cis.yaml
@@ -12,6 +12,8 @@ v1:
         suite_type: suites.uspace.geo_awareness_cis
         resources:
           source_document: source_document
+    execution:
+      stop_fast: true
   artifacts:
     output_path: output/geoawareness_cis
     raw_report: {}
