--- a/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/geospatial_comprehension.yaml
@@ -9,6 +9,8 @@ v1:
         scenario_type: scenarios.interuss.geospatial_map.GeospatialFeatureComprehension
         resources:
           table: example_feature_check_table
+    execution:
+      stop_fast: true
   artifacts:
     output_path: output/geospatial_comprehension
     raw_report: {}
