--- a/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/message_signing.yaml
@@ -48,6 +48,8 @@ v1:
           conflicting_flights: che_conflicting_flights
           priority_preemption_flights: che_conflicting_flights
           dss: scd_dss
+    execution:
+      stop_fast: true
 
   artifacts:
     output_path: output/message_signing
