--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -82,6 +82,8 @@ v1:
                 id_generator: id_generator
                 service_area: service_area
                 problematically_big_area: problematically_big_area
+    execution:
+      stop_fast: true
   artifacts:
     output_path: output/uspace
     raw_report: {}
