--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
@@ -26,6 +26,13 @@
         "array",
         "null"
       ]
+    },
+    "stop_fast": {
+      "description": "If true, escalate the Severity of any failed check to Critical in order to end the test run early.",
+      "type": [
+        "boolean",
+        "null"
+      ]
     }
   },
   "type": "object"
