Add $schema per comments

--- a/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
+++ b/monitoring/uss_qualifier/test_data/che/flight_intents/invalid_flight_auths.yaml
@@ -1,3 +1,4 @@
+$content_schema: monitoring/uss_qualifier/resources/flight_planning/flight_intent/FlightIntentCollection.json
 intents:
   invalid_flight_auth:
     full:
