Exclude pyc files from image

--- a/monitoring/Makefile
+++ b/monitoring/Makefile
@@ -6,7 +6,7 @@ lint:
 format:
 	cd uss_qualifier && make format
 
-image: ../requirements.txt $(shell find . -type f ! -path "*/output/*" ! -name image) $(shell find ../interfaces -type f)
+image: ../requirements.txt $(shell find . -type f ! -path "*/output/*" ! -name image ! -name *.pyc) $(shell find ../interfaces -type f)
 	# Building image due to changes in the following files: $?
 	./build.sh
 
