--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -51,6 +51,12 @@ actions:
         primary_dss_instance: dss
         all_dss_instances: all_dss_instances
   - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.TokenValidation
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
+  - test_scenario:
       scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
       resources: {}
       on_failure: Continue
