--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -53,7 +53,6 @@ v1:
         conflicting_flights:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
-            planning_time: '0:05:00'
             file:
               path: file://./test_data/che/flight_intents/conflicting_flights.yaml
 
@@ -61,7 +60,6 @@ v1:
         priority_preemption_flights:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
-            planning_time: '0:05:00'
             file:
               path: test_data.che.flight_intents.conflicting_flights
 
@@ -69,17 +67,15 @@ v1:
         invalid_flight_intents:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
-            planning_time: '0:05:00'
-            file:
-              path: test_data.che.flight_intents.invalid_flight_intents
+            intent_collection:
+              $ref: test_data.che.flight_intents.invalid_flight_intents
 
         # Details of non-conflicting flights (used in data validation scenario)
         non_conflicting_flights:
           resource_type: resources.flight_planning.FlightIntentsResource
           specification:
-            planning_time: '0:05:00'
-            file:
-              path: file://./test_data/usa/kentland/flight_intents/non_conflicting.yaml
+            intent_collection:
+              $ref: file://../../test_data/usa/kentland/flight_intents/non_conflicting.yaml
 
         # Location of DSS instance that can be used to verify flight planning outcomes
         dss:
