Add EGM96 datum conversion

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ locust==1.2.2  # loadtest
 loguru==0.6.0
 lxml==4.9.1
 marko==1.2.2  # uss_qualifier
+numpy==1.24.4
 pem==21.2.0  # deployment_manager
 pvlib==0.10.1
 pyjwt==2.4.0
@@ -36,6 +37,7 @@ pytest-mock==3.6.1
 pyyaml==6.0.1
 requests==2.31.0
 s2sphere==0.2.5
+scipy==1.10.1
 shapely==1.7.1
 structlog==21.5.0  # deployment_manager
 termcolor==1.1.0
