Add output path override CLI flag

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ArtifactsConfiguration.json
@@ -8,7 +8,7 @@
       "type": "string"
     },
     "output_path": {
-      "description": "Path to folder where artifacts should be written.",
+      "description": "Path to folder where artifacts should be written.  Note that this value may be overridden at runtime without affecting the test baseline.",
       "type": "string"
     },
     "raw_report": {
