[uss_qualifier] DSS0030 heavy_traffic_concurrent migration

--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a/dss_probing.yaml
@@ -62,3 +62,9 @@ actions:
       scenario_type: scenarios.astm.netrid.v22a.dss.CRDBAccess
       resources: {}
       on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.dss.HeavyTrafficConcurrent
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
