--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19/dss_probing.yaml
@@ -62,3 +62,9 @@ actions:
       scenario_type: scenarios.astm.netrid.v19.dss.CRDBAccess
       resources: {}
       on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v19.dss.HeavyTrafficConcurrent
+      resources:
+        dss: dss
+        id_generator: id_generator
+        isa: isa
