Adding the interactions and invalid op checks steps

--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -30,6 +30,7 @@ actions:
     scenario_type: scenarios.astm.utm.PrepareFlightPlanners
     resources:
       flight_planners: flight_planners
+      mock_uss: mock_uss
       dss: dss
       flight_intents: invalid_flight_intents
       flight_intents2: priority_preemption_flights
