Adding missing mock_uss resource to PrepareFlightPlanners

--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -27,6 +27,7 @@ actions:
     scenario_type: scenarios.flight_planning.PrepareFlightPlanners
     resources:
       flight_planners: flight_planners
+      mock_uss: mock_uss
       flight_intents: invalid_flight_auth_flights
   on_failure: Abort
 - action_generator:
