Add U-space MSL test scenario

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -127,6 +127,8 @@ v1:
                   - astm.f3411.v22a.display_provider#Operator Position transmitter
                   - astm.f3411.v22a.dss_provider
                   - astm.f3548.v21.scd#Automated verification
+              - requirements:
+                  - uspace.article8.MSLAltitude
         participant_requirements:
           uss1: uspace
           uss2: uspace
