set resource as optional to enable skipping test

--- a/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/f3548_self_contained.yaml
@@ -15,6 +15,7 @@ v1:
         resources:
           flight_planners: flight_planners
           conflicting_flights: conflicting_flights
+          conflicting_flights_no_equal_prio: conflicting_flights
           priority_preemption_flights: priority_preemption_flights
           invalid_flight_intents: invalid_flight_intents
           non_conflicting_flights: non_conflicting_flights
