--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -15,6 +15,7 @@ actions:
     suite_type: suites.astm.utm.f3548_21
     resources:
       conflicting_flights: conflicting_flights
+      conflicting_flights_no_equal_prio: conflicting_flights
       priority_preemption_flights: priority_preemption_flights
       invalid_flight_intents: invalid_flight_intents
       non_conflicting_flights: non_conflicting_flights
