setup f3548 suite for optional preemption flight intents

--- a/monitoring/uss_qualifier/suites/uspace/required_services.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/required_services.yaml
@@ -46,19 +46,19 @@ actions:
       dss: scd_dss
       dss_instances: scd_dss_instances
   on_failure: Continue
-- test_suite:
-    suite_type: suites.uspace.network_identification
-    resources:
-      flights_data: flights_data
-      service_providers: service_providers
-      observers: observers
-      evaluation_configuration: evaluation_configuration
-      dss_instances: netrid_dss_instances
-      utm_client_identity: utm_client_identity
-      id_generator: id_generator
-      service_area: service_area
-      problematically_big_area: problematically_big_area
-  on_failure: Continue
+#- test_suite:
+#    suite_type: suites.uspace.network_identification
+#    resources:
+#      flights_data: flights_data
+#      service_providers: service_providers
+#      observers: observers
+#      evaluation_configuration: evaluation_configuration
+#      dss_instances: netrid_dss_instances
+#      utm_client_identity: utm_client_identity
+#      id_generator: id_generator
+#      service_area: service_area
+#      problematically_big_area: problematically_big_area
+#  on_failure: Continue
 participant_verifiable_capabilities:
     - id: required_services
       name: U-space Required Services (work in progress)
