--- a/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
+++ b/monitoring/uss_qualifier/suites/uspace/flight_auth.yaml
@@ -23,32 +23,32 @@ actions:
       dss: dss
       dss_instances: dss_instances
   on_failure: Continue
-- test_scenario:
-    scenario_type: scenarios.flight_planning.PrepareFlightPlanners
-    resources:
-      flight_planners: flight_planners
-      flight_intents: invalid_flight_auth_flights
-  on_failure: Abort
-- action_generator:
-    generator_type: action_generators.flight_planning.FlightPlannerCombinations
-    resources:
-      flight_planners: flight_planners
-      invalid_flight_auth_flights: invalid_flight_auth_flights
-    specification:
-      resources:
-        flight_planners: flight_planners
-        invalid_flight_auth_flights: invalid_flight_auth_flights
-      action_to_repeat:
-        test_scenario:
-          scenario_type: scenarios.uspace.flight_auth.Validation
-          resources:
-            flight_intents: invalid_flight_auth_flights
-            flight_planner: flight_planner
-        on_failure: Continue
-      flight_planners_source: flight_planners
-      roles:
-      - flight_planner
-  on_failure: Continue
+#- test_scenario:
+#    scenario_type: scenarios.flight_planning.PrepareFlightPlanners
+#    resources:
+#      flight_planners: flight_planners
+#      flight_intents: invalid_flight_auth_flights
+#  on_failure: Abort
+#- action_generator:
+#    generator_type: action_generators.flight_planning.FlightPlannerCombinations
+#    resources:
+#      flight_planners: flight_planners
+#      invalid_flight_auth_flights: invalid_flight_auth_flights
+#    specification:
+#      resources:
+#        flight_planners: flight_planners
+#        invalid_flight_auth_flights: invalid_flight_auth_flights
+#      action_to_repeat:
+#        test_scenario:
+#          scenario_type: scenarios.uspace.flight_auth.Validation
+#          resources:
+#            flight_intents: invalid_flight_auth_flights
+#            flight_planner: flight_planner
+#        on_failure: Continue
+#      flight_planners_source: flight_planners
+#      roles:
+#      - flight_planner
+#  on_failure: Continue
 participant_verifiable_capabilities:
     - id: no_failures
       name: Fails No Existing Tests
